fix homepage overflow issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,7 +60,7 @@ body {
 
 .grid-3-vertical-centerbias {
   display: grid;
-  grid-template-rows: 10% 90% 10%;
+  grid-template-rows: 10% 80% 10%;
   height: 100%;
 }
 
